<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakingOrderActivity"
    >

    <TextView
        android:id="@+id/orderIsReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order in progress!"
        android:textSize="40sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:textStyle="italic|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="480dp"
        android:text="Rachel is working on your order, she will let you know once it is ready."
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderIsReady" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/burgerGif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="155dp"
        android:src="@drawable/burger"
        app:layout_constraintBottom_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>